# spbu_2020_c_homeworks

./: .clang-format  .gitignore  CMakeLists.txt
Homework_1/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
Homework_2/: 2.task_3.c  2.task_4.c  task_1.c  task_2.c  task_5.recursive.c  task_5i.c  task_5r.c
Homework_3/: task_1.c  task_2.c
Homework_3/task_1/: list.h
Homework_4/: task_1.c  task_2.c  task_3.c
Homework_5/: task_1.c  task_2.c
Homework_6/: task_1.c
Homework_7/: task_1.c
Homework_8/: task_1.c
Test/: katya_2.c  task2_1.c  task2_2.c  task2_3.c  task_1.c  task_2.c  test3.2.c  test3_1.c  test3_3.c
