cmake_minimum_required(VERSION 3.17)
project(spbu_2020_c_homeworks C)

set(CMAKE_C_STANDARD 11)

set(SOURCE_LIB
        library/commonUtils/numericOperations.c)

add_library(library ${SOURCE_LIB})
add_library(stackPostfix library/commonUtils/stackPostfix.c)
add_library(list library/commonUtils/list.c)
add_library(binarySearchTree library/commonUtils/tree/binarySearchTree.c library/commonUtils/tree/binarySearchInterior.c)
add_library(avlTree library/commonUtils/tree/avlTree.c library/commonUtils/tree/binarySearchInterior.c)
add_library(graph library/commonUtils/graph.c)
add_library(hashTable library/commonUtils/hashTable.c)
add_library(dfa library/commonUtils/dfa.c)
add_library(stringOperations library/commonUtils/stringOperations.c)
add_library(priorityQueue library/commonUtils/priorityQueue.c)

add_executable(1.task_1 Homework_1/task_1.c)
add_executable(1.task_2 Homework_1/task_2.c)
add_executable(1.task_3 Homework_1/task_3.c)
add_executable(1.task_4 Homework_1/task_4.c)
add_executable(1.task_5 Homework_1/task_5.c)
add_executable(2.task_1 Homework_2/task_1.c)
add_executable(2.task_2 Homework_2/task_2.c)
add_executable(2.task_3 Homework_2/2.task_3.c)
add_executable(2.task_4 Homework_2/2.task_4.c)
add_executable(2.task_5i Homework_2/task_5.iterative.c)
add_executable(2.task_5r Homework_2/task_5.recursive.c)

add_executable(4.task_1 Homework_4/task_1.c)
target_link_libraries(4.task_1 stackPostfix)
add_executable(4.task_2 Homework_4/task_2.c)
add_executable(4.task_3 Homework_4/task_3.c)

add_executable(5.task_2 Homework_5/task_2.c)
target_link_libraries(5.task_2 avlTree binarySearchTree)

add_executable(6.task_1 Homework_6/task_1.c)
target_link_libraries(6.task_1 hashTable)

add_executable(7.task_1 Homework_7/task_1.c)
target_link_libraries(7.task_1 graph)

add_executable(8.task_1 Homework_8/task_1.c)
target_link_libraries(8.task_1 dfa)
target_link_libraries(8.task_1 stringOperations)

add_executable(Test_2 Test/task_2.c library/commonUtils/test1_2.c)
add_executable(1.Test_1 Test/task_1.c)
target_link_libraries(1.Test_1 list)
add_executable(1.Test_2 Test/task_2.c library/commonUtils/test1_2.c)
add_executable(2.Test_1 Test/task2_1.c)
add_executable(2.Test_2 Test/task2_2.c)
add_executable(2.Katya Test/katya_2.c)

add_executable(3.task_1 Homework_3/task_1.c)
target_link_libraries(3.task_1 list)
add_executable(3.task_2 Homework_3/task_2.c)
target_link_libraries(3.task_2 list)
add_executable(3.Test_2 Test/test3.2.c)
target_link_libraries(3.Test_2 priorityQueue)
add_executable(3.Test_3 Test/test3_3.c)
target_link_libraries(3.Test_3 dfa)
target_link_libraries(3.Test_3 stringOperations)
